--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <section class="gallery">
             <h2>Memories Together</h2>
             <div class="photos">
-                <img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?auto=format&fit=crop&w=400&q=80" alt="Mom and me 1">
-                <img src="https://images.unsplash.com/photo-1504593811423-6dd665756598?auto=format&fit=crop&w=400&q=80" alt="Mom and me 2">
-                <img src="https://images.unsplash.com/photo-1558211583-d9b8c76f6aa1?auto=format&fit=crop&w=400&q=80" alt="Mom and me 3">
+                <img src="cc38d253-0a89-498e-b0f7-a581a4f0ff7c.jpg" alt="Mom and me 1">
+                <img src="a14406c1-8e1b-41d6-90b8-4259a34ee016.jpg" alt="Mom and me 2">
+                <img src="2395bce3-9989-4a83-951c-932faf072ccb.jpg" alt="Mom and me 3">
             </div>
         </section>
 
@@ -46,3 +46,4 @@
     </div>
 </body>
 </html>
+
