--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
         </section>
 
         <footer>
-            <p>Love you always ❤️ — Your Child</p>
+            <p>Love you always ❤️ — JETLOG</p>
         </footer>
     </div>
 </body>
 </html>
+
 
